# myshell

./: CMakeLists.txt  README.md  apt_packages.txt  conanfile.txt  file.msh  mycat
cmake/: config.cmake
inc/operations/: operations.hpp
src/: main.cpp  mycat.cpp  myrls.cpp  operations.cpp
